# M3UDownloader

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkhandler.cpp  networkhandler.h  version.h
include/: conversionHandler.h  library.h  mainwindow.h  networkhandler.h
source/: MimeTypes.cpp  conversionHandler.cpp  library.cpp  main.cpp  mainwindow.cpp  networkhandler.cpp
ui/: mainwindow.ui
